--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<p>Hello, World!</p>
-<p>Lorem ipsum dolor sit amet.</p>
-</body>
+<p>Excuse me, bro/p>
+w</body>
 </html>
